--- a/first.html
+++ b/first.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repo
     </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>this my second repo</h1>
     <h2>heading 2</h2>
     <h2> another heading 2</h2>
+
 </body>
 </html>
