--- a/first.html
+++ b/first.html
@@ -13,6 +13,10 @@
     <h1>this my second repo</h1>
     <h2>heading 2</h2>
     <h2> another heading 2</h2>
+    <p> this is a paragraph that is styled to be blue</p>
+    <h3>this is h3</h3>
+    <h4>this is heading 4</h4>
+    <h5>this is heading5</h5>
 
 </body>
 </html>
