--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h4>this is heading 4</h4>
     <h5>this is heading5</h5>
     <p>new p to check save issues with vs code and git</p>
+    <img src="lighthouse.jpg" alt="lighthouse">
 
 </body>
 </html>
